136312 Java Model Exception in org.eclipse.jdt.internal.core.JavaElement.openWhenClosed